--- a/assets/index.html
+++ b/assets/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Extra</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
    <div id="main">
+    <img src="./img1.jpg" alt="Mulher colocando pins roxos no globo terreste">
+   </div>
 </body>
 </html>
