--- a/assets/index.html
+++ b/assets/index.html
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
 <head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Extra</title>
-  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Inter:wght@500&display=swap" 
+  rel="stylesheet">
+  <link rel="stylesheet" href="style.css"/>
+
+  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Inter:wght@500&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" 
+  rel="stylesheet">
 </head>
 <body>
    <div id="main">
     <img src="./img1.jpg" alt="Mulher colocando pins roxos no globo terreste">
+    <h1><span>O seu próximo <strong id="destino">destino</strong> pode estar aqui...</span></h1>
+    <p> Aqui você encontra uma seleção de <strong id="pacotes">pacotes completos</strong> para as suas férias!
+        <br>
+        <br>
+        <br>
+        Na <strong>Flutuar</strong> você encontra pacotes de viagens nacionais e internacionais que incluem:
+        passagens aéreas, hotéis, café da manhã,
+        e até seguro viagem com <strong id="preços">preços arrasadores</strong>!
+      
+    </p>
+    
+    <p>
+      <span class="rodapé">Se você ainda não tem um destino definido, confira nossa seção de ofertas.</span>
+    </p>
    </div>
+   <div id="footer">
+    <a href="https://www.decolar.com/"><strong id="destino rodape">Destinos</strong></a>
+
+
+
+   </div>
+
+
+
+
+
 </body>
 </html>
