terminando com ondas e ajeitando footer

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projeto Extra</title>
+  <title>Destinos</title>
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Inter:wght@500&display=swap" 
   rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
@@ -35,15 +35,21 @@
     </p>
    </div>
    <div id="footer">
-    <a href="https://www.decolar.com/"><strong id="destino rodape">Destinos</strong></a>
+    
+    <p ><strong id="destinos1">
+      <br>
+      <br>
+      <br>
+      Destinos &ensp; &ensp; &ensp; 
+      Ofertas &ensp; &ensp; &ensp;  
+      Contato</strong>
+    </p>
 
-
-
+    <img 
+      id="Wave"
+      src="./Wave.jpg"
+      alt="Ondas azuis"> 
+    
    </div>
-
-
-
-
-
 </body>
 </html>
